--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "dotenv": "^16.1.4",
     "inquirer": "^8.2.4",
-    "mysql2": "^3.3.4",
-    "sequelize": "^6.32.0"
+    "mysql2": "^3.3.4"
   }
 }
